# BrowserBookmarkBackupTool

./: Cargo.toml  build.rs  create_icon.py
src/: autostart.rs  backup_manager.rs  main.rs  ui.rs
